--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="container mt-5">
+    <div class="jumbotron">
+        <router-outlet ></router-outlet>
+    </div>
+</div>
