--- a/src/app/pages/catalogo/catalogo.component.html
+++ b/src/app/pages/catalogo/catalogo.component.html
@@ -1,1 +1,48 @@
-<p>catalogo works!</p>
+<div
+  *ngIf="!cargando && productos.length === 0"
+  class="alert alert-warning text-center mt-3 animate__animated animate__fadeIn animate__fast"
+>
+  <h4 class="alert-heading">No hay registros</h4>
+  <p>
+    <i class="fa fa-exclamation fa-2x" aria-hidden="true"></i>
+  </p>
+  <p class="mb-0">Espere por favor</p>
+</div>
+<div class="card-deck" *ngFor="let producto of productos">
+  <a class="text-decoration-none" href="{{apiWhats}}Hola+Tera%0A%0AMi+nombre+es+Sergio+me+interesa+la+propiedad+{{producto.nombre}}+de+{{ producto.contenido }}%0A%0Ade+contado&app_absent=0">
+    <div class="card mb-3" style="max-width: 540px">
+      <div class="row no-gutters">
+        <div class="col-md-4 img-thumbnail">
+          <img  [src]="producto.foto" alt="" />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{ producto.nombre }}</h5>
+            <p class="card-text">{{ producto.descrip }}</p>
+            <p class="card-text">
+              <small class="text-muted">{{ producto.contenido }}</small>
+            </p>
+            <div class="card-footer bg-white border-0">
+              <label *ngIf="producto.disp" class="badge badge-success"
+                >Disponible</label
+              >
+              <label *ngIf="!producto.disp" class="badge badge-danger"
+                >No disponible</label
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+<div
+  *ngIf="cargando"
+  class="alert alert-info text-center mt-3 animate__animated animate__fadeIn animate__fast"
+>
+  <h4 class="alert-heading">Cargando</h4>
+  <p>
+    <i class="fas fa-sync fa-spin fa-2x"></i>
+  </p>
+  <p class="mb-0">Espere por favor</p>
+</div>
