--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
 </div>
-
+<div class="table-responsive">
 <table *ngIf="!cargando && productos.length > 0" class="table">
   <thead class="thead-dark">
     <tr>
@@ -24,6 +24,7 @@
   <tbody>
     <tr *ngFor="let producto of productos; let i = index">
       <th scope="row">{{ i + 1 }}</th>
+      <td>{{producto.foto}}</td>
       <td>{{ producto.nombre }}</td>
       <td>{{ producto.aroma }}</td>
       <td>{{ producto.descrip }}</td>
@@ -50,7 +51,7 @@
     </tr>
   </tbody>
 </table>
-
+</div>
 <div
   *ngIf="!cargando && productos.length === 0"
   class="alert alert-warning text-center mt-3 animate__animated animate__fadeIn animate__fast"
