--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -13,7 +13,7 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Producto</th>
+      <th scope="col">Imagen</th>
       <th scope="col">Aroma</th>
       <th scope="col">Descripción</th>
       <th scope="col">Contenido</th>
@@ -24,9 +24,9 @@
   <tbody>
     <tr *ngFor="let producto of productos; let i = index">
       <th scope="row">{{ i + 1 }}</th>
-      <td>{{producto.foto}}</td>
-      <td>{{ producto.nombre }}</td>
+      <td><img [src]="producto.foto" alt="" style="height: 50px; width: auto;"></td>
       <td>{{ producto.aroma }}</td>
+      <td>{{ producto.nombre }}</td>
       <td>{{ producto.descrip }}</td>
       <td>{{ producto.contenido }} ml</td>
       <td>
