--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
-  <a class="navbar-brand" href="#">Tera</a>
+  <a class="navbar-brand" routerLink="catalogo" routerLinkActive="router-link-active" >Tera</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -25,7 +25,7 @@
         <a class="nav-link" routerLink="producto/nuevo">Crear producto</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!-- <form class="form-inline my-2 my-lg-0">
       <input
         class="form-control mr-sm-2"
         type="search"
@@ -35,6 +35,6 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Search
       </button>
-    </form>
+    </form> -->
   </div>
 </nav>
